--- a/MTurk Calc/MainWindow.xaml
+++ b/MTurk Calc/MainWindow.xaml
@@ -5,8 +5,102 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:MTurk_Calc"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="MainWindow" Height="700" Width="1250">
     <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
+        </Grid.RowDefinitions>
+
+        <ListView ItemsSource="{Binding hitExpands, UpdateSourceTrigger=PropertyChanged}" Grid.Row="0" BorderThickness="0">
+            <ListView.ItemTemplate>
+                <DataTemplate>
+                    <Expander>
+                        <Expander.Header>
+                            <Grid Background="{StaticResource headerBackgroundBrush}">
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="250"/>
+                                    <ColumnDefinition Width="600"/>
+                                    <ColumnDefinition Width="50"/>
+                                    <ColumnDefinition Width="75"/>
+                                    <ColumnDefinition Width="50"/>
+                                    <ColumnDefinition Width="75"/>
+                                    <ColumnDefinition Width="100"/>
+                                </Grid.ColumnDefinitions>
+                                
+                                <TextBlock Text="{Binding header}"></TextBlock>
+                                <TextBlock Text="Pending:" Grid.Column="2"/>
+                                <TextBlock Text="{Binding pending, StringFormat={}{0:0.00}}" Grid.Column="3"></TextBlock>
+                                <TextBlock Text="Total:" Grid.Column="4"></TextBlock>
+                                <TextBlock Text="{Binding total, StringFormat={}{0:0.00}}" Grid.Column="5"></TextBlock>
+                            </Grid>
+                        </Expander.Header>
+                        <StackPanel>
+                            <ListView ItemsSource="{Binding hitList}" 
+                                      BorderThickness="0" 
+                                      Padding="21,0,0,0"
+                                      SelectedItem="{Binding selected, Mode=TwoWay}"
+                                      SelectedIndex="{Binding index, Mode=TwoWay}"
+                                      AlternationCount="2"
+                                      ItemContainerStyle="{StaticResource alternatingListViewItem}">
+                                
+                                <ListView.ContextMenu>
+                                    <ContextMenu>
+                                        <MenuItem Header="Edit" Command="{Binding editCommand}"/>
+                                        <MenuItem Header="Delete" Command="{Binding deleteCommand}" />
+                                    </ContextMenu>
+                                </ListView.ContextMenu>
+
+                                <ListView.ItemTemplate>
+                                    <DataTemplate>
+                                        <Grid>
+                                            <Grid.ColumnDefinitions>
+                                                <ColumnDefinition Width="250"/>
+                                                <ColumnDefinition Width="600"/>
+                                                <ColumnDefinition Width="50"/>
+                                                <ColumnDefinition Width="75"/>
+                                                <ColumnDefinition Width="50"/>
+                                                <ColumnDefinition Width="75"/>
+                                                <ColumnDefinition Width="100"/>
+                                            </Grid.ColumnDefinitions>
+
+                                            <TextBlock Grid.Column="0" 
+                                                       HorizontalAlignment="Left" 
+                                                       Text="{Binding requester}"/>
+
+                                            <TextBlock Grid.Column="1" 
+                                                       HorizontalAlignment="Left" 
+                                                       Text="{Binding name}"/>
+
+                                            <TextBlock Grid.Column="3" 
+                                                       HorizontalAlignment="Left" 
+                                                       Text="{Binding amount}"/>
+
+                                            <TextBlock Grid.Column="5" 
+                                                       HorizontalAlignment="Left" 
+                                                       Text="{Binding bonus}"/>
+
+                                            <TextBlock Grid.Column="6" 
+                                                       HorizontalAlignment="Left" 
+                                                       Text="{Binding status}"/>
+                                        </Grid>
+                                    </DataTemplate>
+                                </ListView.ItemTemplate>
+                            </ListView>
+                        </StackPanel>
+                    </Expander>
+                </DataTemplate>
+            </ListView.ItemTemplate>
+        </ListView>
         
+        <Button Style="{StaticResource TextButton}" Padding="10,0,0,0" Grid.Row="1" Width="Auto" HorizontalAlignment="Left" Content="+Add Hit" Command="{Binding addCommand}"/>
+        
+        <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Grid.Row="2">
+            <TextBlock Text="Pending: "></TextBlock>
+            <TextBlock Text="{Binding allPending, StringFormat={}{0:0.00}}"></TextBlock>
+            <TextBlock Text="Total: "></TextBlock>
+            <TextBlock Text="{Binding allTotal, StringFormat={}{0:0.00}}"></TextBlock>
+        </StackPanel>
     </Grid>
 </Window>
